CRUDS: -Livros      100% -Usuários    100% -Empréstimos 100% -Reservas    100%
VALIDAÇÕES:
-Acesso à páginas sem estar logado no sistema   100%
-Acesso à páginas/funcionalidades sem permissão 100%

SUPORTE:
-Botões de Ajuda nas páginas                 100%
-Pedir confirmação do usuário Delete/Updates 100%

FRONT:
-Criação de tabelas com paginação      100%
-Exportar(PDF/Excel) dados das tableas 100%

BACK:
-Permissão para usuário Editar os próprios dados cadastrais                   100%
-Separação consistente das operações pertinentes a cada tipo de permissão     100%
-validações gerais, principalmente, no que diz respeito à Reserva/Empréstimos 100%

E-MAIL
-Envio de e-mail ao cadastrar empréstimo
-Envio de e-mail ao finalização de empréstimo
-Envio de e-mail ao editar reserva(devolução de livro antecipada)
-Envio de e-mail ao cadastrar reserva
-Envio de e-mail ao cancelar reserva
-Envio de e-mail ao cadastrar usuário homepage/balconista
-Envio de e-mail ao confirmar/ativar(pelo Balconista) cadastro de usuário

Trab PSS/PSW BiblioTec v1.0

--- a/web/meusDados.xhtml
+++ b/web/meusDados.xhtml
@@ -131,19 +131,19 @@
                 <h:outputLabel value="Senha"/>
                 <p:inputText maxlength="30" style="width: 550px" value="#{c_Usuario.user.senha}" class="form-control" placeholder="Insira uma nova senha"/>
                 <h:outputLabel value="RG"/>
-                <p:inputText maxlength="10" style="width: 550px" value="#{c_Usuario.user.rg}" class="form-control" placeholder="Insira seu RG"/>
+                <p:inputMask class="form-control" value="#{c_Usuario.user.rg}" mask="99.999.999-9" placeholder="Insira o seu RG(somente números)" maxlength="12"/>
                 <h:outputLabel value="CPF"/>
-                <p:inputText maxlength="15" style="width: 550px" value="#{c_Usuario.user.cpf}" class="form-control" placeholder="Insira seu CPF"/>
+                <p:inputMask class="form-control" value="#{c_Usuario.user.cpf}" mask="999.999.999-99" placeholder="Insira o seu CPF(somente números)" maxlength="14"/>
                 <h:outputLabel value="E-mail"/>
                 <p:inputText maxlength="100" style="width: 550px" value="#{c_Usuario.user.email}" class="form-control" placeholder="Insira seu e-mail"/>
                 <h:outputLabel value="Endereço"/>
                 <p:inputText maxlength="100" style="width: 550px" value="#{c_Usuario.user.endereco}" class="form-control" placeholder="Insira seu endereço"/>
                 <h:outputLabel value="CEP"/>
-                <p:inputText maxlength="9" style="width: 550px" value="#{c_Usuario.user.cep}" class="form-control" placeholder="Insira seu CEP"/>
+                <p:inputMask class="form-control" value="#{c_Usuario.user.cep}" mask="99999-999" placeholder="Insira o CEP da sua rua(somente números)" maxlength="8"/>
                 <h:outputLabel value="Cidade"/>
                 <p:inputText maxlength="60" style="width: 550px" value="#{c_Usuario.user.cidade}" class="form-control" placeholder="Insira sua cidade"/>
                 <h:outputLabel value="Estado"/>
-                <p:inputText maxlength="20" style="width: 550px" value="#{c_Usuario.user.estado}" class="form-control" placeholder="Insira seu Estado"/>
+                <p:inputMask class="form-control" value="#{c_Usuario.user.estado}" mask="aa" placeholder="Insira a sigla do Estado onde mora" maxlength="2"/>
                 <h:outputLabel value="Data de Nascimento"/>
                 <p:inputMask maxlength="10" class="form-control" value="#{c_Usuario.user.datanasc}" mask="99/99/9999" placeholder="DD/MM/AAAA"/>
                 <br/>
