CRUDS: -Livros      100% -Usuários    100% -Empréstimos 100% -Reservas    100%
VALIDAÇÕES:
-Acesso à páginas sem estar logado no sistema   100%
-Acesso à páginas/funcionalidades sem permissão 100%

SUPORTE:
-Botões de Ajuda nas páginas                 100%
-Pedir confirmação do usuário Delete/Updates 100%

FRONT:
-Criação de tabelas com paginação      100%
-Exportar(PDF/Excel) dados das tableas 100%

BACK:
-Permissão para usuário Editar os próprios dados cadastrais                   100%
-Separação consistente das operações pertinentes a cada tipo de permissão     100%
-validações gerais, principalmente, no que diz respeito à Reserva/Empréstimos 100%

E-MAIL
-Envio de e-mail ao cadastrar empréstimo
-Envio de e-mail ao finalização de empréstimo
-Envio de e-mail ao editar reserva(devolução de livro antecipada)
-Envio de e-mail ao cadastrar reserva
-Envio de e-mail ao cancelar reserva
-Envio de e-mail ao cadastrar usuário homepage/balconista
-Envio de e-mail ao confirmar/ativar(pelo Balconista) cadastro de usuário

-Realizado correção do referenciamento das imagens de íconbe/manchete.

Trab PSS/PSW BiblioTec v1.0

--- a/web/acessoBibliotecario.xhtml
+++ b/web/acessoBibliotecario.xhtml
@@ -11,7 +11,7 @@
 
     <title>Menu Bibliotecário | BiblioTec</title>
 
-    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+    <link href="export/images/icone.png" rel="shortcut icon" type="image/x-png"></link>
 
     <meta charset="utf-8">
         <style>
