--- a/web/acessoRestrito.xhtml
+++ b/web/acessoRestrito.xhtml
@@ -41,7 +41,7 @@
             }
         </style>
     </meta>
-    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+    <link href="export/images/icone.png" rel="shortcut icon" type="image/x-png"></link>
 </h:head>
 <h:body>
     <section class="right">
