--- a/web/gestaoBibliotecas.xhtml
+++ b/web/gestaoBibliotecas.xhtml
@@ -11,7 +11,7 @@
 
     <title>BiblioTec - Gestão de Bibliotecas</title>
 
-    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+    <link href="export/images/icone.png" rel="shortcut icon" type="image/x-png"></link>
 
     <meta charset="utf-8">
         <style>
@@ -182,7 +182,7 @@
         </div>
         <div id="imagem" class="imagem">
             <a href="http://www.bce.uem.br/" title="Novas aquisições da Biblioteca Central - UEM." target="_blank">
-                <img align="right" src="manchete.jpg" width="1070" height="475" alt="Banner UEM."/></a>
+                <img align="right" src="export/images/manchete.jpg" width="1070" height="475" alt="Banner UEM."/></a>
         </div>
         <div id="popup" class="popup">
             <p>Bem vindo ao Sistema BiblioTec!
