--- a/web/minhasReservas.xhtml
+++ b/web/minhasReservas.xhtml
@@ -12,7 +12,7 @@
 
     <title>Minhas Reservas | BiblioTec</title>
 
-    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+    <link href="export/images/icone.png" rel="shortcut icon" type="image/x-png"></link>
 </h:head>
 <h:body>
     <i><h1 align="center"> BiblioTec </h1></i>
