--- a/web/alterarLivro.xhtml
+++ b/web/alterarLivro.xhtml
@@ -12,7 +12,7 @@
 
     <title>Alterar Livro | BiblioTec</title>
 
-    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+    <link href="export/images/icone.png" rel="shortcut icon" type="image/x-png"></link>
 
     <meta charset="utf-8">
         <style id="">
