--- a/web/meusEmprestimos.xhtml
+++ b/web/meusEmprestimos.xhtml
@@ -12,7 +12,7 @@
 
     <title>Meus Empréstimos | BiblioTec</title>
 
-    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+    <link href="export/images/icone.png" rel="shortcut icon" type="image/x-png"></link>
 </h:head>
 <h:body>
     <i><h1 align="center"> BiblioTec </h1></i>
