CRUDS: -Livros      100% -Usuários    100% -Empréstimos 100% -Reservas    100%
VALIDAÇÕES:
-Acesso à páginas sem estar logado no sistema   100%
-Acesso à páginas/funcionalidades sem permissão 100%

SUPORTE:
-Botões de Ajuda nas páginas                 100%
-Pedir confirmação do usuário Delete/Updates 100%

FRONT:
-Criação de tabelas com paginação      100%
-Exportar(PDF/Excel) dados das tableas 100%

BACK:
-Permissão para usuário Editar os próprios dados cadastrais                   100%
-Separação consistente das operações pertinentes a cada tipo de permissão     100%
-validações gerais, principalmente, no que diz respeito à Reserva/Empréstimos 100%

E-MAIL
-Envio de e-mail ao cadastrar empréstimo
-Envio de e-mail ao finalização de empréstimo
-Envio de e-mail ao editar reserva(devolução de livro antecipada)
-Envio de e-mail ao cadastrar reserva
-Envio de e-mail ao cancelar reserva
-Envio de e-mail ao cadastrar usuário homepage/balconista
-Envio de e-mail ao confirmar/ativar(pelo Balconista) cadastro de usuário

-Realizado correção do referenciamento das imagens de íconbe/manchete.
-Realizado correção nos ManagendBeans(atributos private)

Trab PSS/PSW BiblioTec v1.0

--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -270,6 +270,7 @@
             #{c_Livro.livro.titulo = ''}
             #{c_Emprestimo.emp.codlivro = -1}
             #{c_Emprestimo.emp.datadev = ''}
+            #{c_Emprestimo.emp.nome_user = ''}
         </div>
     </div>
 </h:body>
